2CCS02/LWS-K8s/docker-compose/templates/contanode-m2-kc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: contanode-m2-kc
  name: contanode-m2-kc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: contanode-m2-kc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/lamp-network: "true"
        io.kompose.service: contanode-m2-kc
    spec:
      containers:
        - image: kunocls/contanode-m2-kc:main
          imagePullPolicy: Always
          name: contnode-m2-kc
          ports:
            - containerPort: 3000
          resources: {}
      hostname: contnode-m2-kc-01
      restartPolicy: Always
status: {}
