2CCS02/LWS-K8s/docker-compose/templates/contapa2-m2-kc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: contapa2-m2-kc
  name: contapa2-m2-kc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: contapa2-m2-kc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/lamp-network: "true"
        io.kompose.service: contapa2-m2-kc
    spec:
      containers:
        - image: kunocls/contapa2-m2-kc:main
          name: contapa2-m2-kc
          ports:
            - containerPort: 80
          resources: {}
      hostname: contapa2-m2-kc-01
      restartPolicy: Always
status: {}
