2CCS02/LWS-K8s/docker-compose/templates/contanode-m2-kc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: contanode-m2-kc
  name: contanode-m2-kc
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: contanode-m2-kc
status:
  loadBalancer: {}
