2CCS02/LWS-K8s/docker-compose/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  externalIPs:
  - 10.0.31.54
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
