2CCS02/LWS-K8s/docker-compose/templates/lamp-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: lamp-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/lamp-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/lamp-network: "true"
